[Mac] Don't unhide Chrome when a notification is displayed.

Right now, if Chrome was hidden (cmd+h) and a notification comes in, the
whole app unhides.

Calling setHidden:YES on the notification window lets it be visible when
Chrome is hidden, and the -[NSWindow order*] methods respect it by not
unhiding the app.

BUG=653266

Review-Url: https://codereview.chromium.org/2399993003
Cr-Commit-Position: refs/heads/master@{#423856}

Former-commit-id: a8cad7b0b4254bec43a95c58509f636236b262f2